# sdcc_stc_example

./: CMakeLists.txt  README.md  rebuild.sh  toolchain.cmake
code/: main.c
code/common/: c_math.h
code/driver/: config.h  stc8g1k08a.h  timer.h  uart.c  uart.h
src/: delay.h  gpio.h  intrins.h  main.c  reg_base.h
stc8prog/: stc8prog
